# serializer version: 1
# name: TestCohort.test_in_cohort_dynamic
  '''
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), in(events.person_id, (
  SELECT cohortpeople.person_id AS person_id 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, XX)) 
  GROUP BY cohortpeople.person_id, cohortpeople.cohort_id, cohortpeople.version 
  HAVING ifNull(greater(sum(cohortpeople.sign), 0), 0))), equals(events.event, %(hogql_val_0)s)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event 
  FROM events 
  WHERE and(in(person_id, (
  SELECT person_id 
  FROM raw_cohort_people 
  WHERE equals(cohort_id, XX) 
  GROUP BY person_id, cohort_id, version 
  HAVING greater(sum(sign), 0))), equals(event, 'RANDOM_TEST_ID::UUID')) 
  LIMIT 100
  '''
# ---
# name: TestCohort.test_in_cohort_dynamic_other_team_in_project
  '''
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), in(events.person_id, (
  SELECT cohortpeople.person_id AS person_id 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, XX)) 
  GROUP BY cohortpeople.person_id, cohortpeople.cohort_id, cohortpeople.version 
  HAVING ifNull(greater(sum(cohortpeople.sign), 0), 0))), equals(events.event, %(hogql_val_0)s)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event 
  FROM events 
  WHERE and(in(person_id, (
  SELECT person_id 
  FROM raw_cohort_people 
  WHERE equals(cohort_id, XX) 
  GROUP BY person_id, cohort_id, version 
  HAVING greater(sum(sign), 0))), equals(event, 'RANDOM_TEST_ID::UUID')) 
  LIMIT 100
  '''
# ---
# name: TestCohort.test_in_cohort_static
  '''
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), in(events.person_id, (
  SELECT person_static_cohort.person_id AS person_id 
  FROM person_static_cohort 
  WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, XX))))) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event 
  FROM events 
  WHERE in(person_id, (
  SELECT person_id 
  FROM static_cohort_people 
  WHERE equals(cohort_id, XX))) 
  LIMIT 100
  '''
# ---
# name: TestCohort.test_in_cohort_strings
  '''
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), in(events.person_id, (
  SELECT person_static_cohort.person_id AS person_id 
  FROM person_static_cohort 
  WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, XX))))) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event 
  FROM events 
  WHERE in(person_id, (
  SELECT person_id 
  FROM static_cohort_people 
  WHERE equals(cohort_id, XX))) 
  LIMIT 100
  '''
# ---
